Tab discarding: Attempt fast shutdown of render process

BUG=731240
R=chrisha@chromium.org

Change-Id: I2e6e8ed5cfcc0e415d633283c80869c261132d5d